--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 authors = [
     {name = "TN3W", email = "tn3w@protonmail.com"}
 ]
-license = "MIT"
+license = "Apache-2.0"
 requires-python = ">=3.6"
 classifiers = [
     "Development Status :: 5 - Production/Stable",
